Align items correctly and add style to button

--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,10 @@ html {
   box-sizing: inherit;
 }
 
-
-
+body {
+  display: flex;
+  flex-direction: column;
+}
 
 /* HEADER */
 .header,
@@ -23,10 +25,13 @@ html {
   background-color: #1f2937;
 }
 
+.header .wrapper {
+  height: 60px;
+}
+
 .wrapper {
   width: 60%;
   margin: 0 auto;
-  height: 60px;
   display: flex;
   align-items: center;
   gap: 24px;
@@ -48,6 +53,9 @@ html {
 
 /* HERO */
 
+.hero {
+  display: flex;
+}
 .hero .main {
   font-size: 48px;
   color: #f9faf8;
@@ -58,4 +66,23 @@ html {
   background-color: #3882f6;
   text-decoration: none;
   color: #f9faf8;
+}
+
+.hero .wrapper {
+  display: flex;
+  padding: 80px 0px;
+  gap: 60px;
+}
+
+.hero .content {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 12px;
+}
+.hero .btn {
+  padding: 6px 24px;
+  margin-top: 12px;
+  font-weight: bold;
+  border-radius: 6px;
 }
